--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,38 @@
 body {
-    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(to bottom, #f9f7f1, #e6dcd1);
+    background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png'), 
+                      url('https://www.transparenttextures.com/patterns/little-pluses.png');
+    background-size: cover, auto;
+    background-blend-mode: overlay;
+}
+
+.container {
+    align-items: center;
+    width: 80%;
 }
 
 h1 {
     margin-bottom: 30px;
+    font-weight: bold;
+    border-radius: 30px;
+    background-color: #b85c38;
+    color: azure;
+}
+
+.btn-primary{
+    background: #b85c38;
+}
+
+.btn-primary:hover{
+    background: #341b11;
+}
+
+.border-primary{
+    color: #b85c38;
 }
 
 #recipes .card {
