--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,33 @@
-<<<<<<< HEAD
 body {
+    font-family: "Ubuntu", sans-serif !important;
+    font-weight: 300;
+    font-style: normal;
     margin: 0;
     padding: 0;
     height: 100vh;
     font-family: 'Arial', sans-serif;
     background: linear-gradient(to bottom, #f9f7f1, #e6dcd1);
-    background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png'), 
-                      url('https://www.transparenttextures.com/patterns/little-pluses.png');
-    background-size: cover, auto;
-    background-blend-mode: overlay;
+    background-image: url('../img/comida.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
+    margin-top:  40px;
+    border-radius: 10px;
     align-items: center;
     width: 80%;
+    background-color: rgba(247, 255, 240, 0.863);
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 5px;
 }
 
 h1 {
@@ -39,33 +53,3 @@ h1 {
 #recipes .card {
     margin-bottom: 20px;
 }
-=======
-h1 {
-    text-align: center;
-}
-
-body {
-    background-image: url('../img/comida.jpg');
-    font-family: Arial, sans-serif;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.container {
-    border: 1px solid #dee2e6;
-    border-radius: 0.25rem;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
-}
-#recipeForm{
-    padding: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(202, 232, 235);
-}
->>>>>>> 50e9d516a1b0a2731ec8d0a2bd15cc63f44e849b
